<?xml version="1.0"?>
<package format="3">
  <name>libuvc_camera</name>
  <version>0.0.11</version>
  <description>USB Video Class camera driver</description>

  <maintainer email="ken@tossell.net">Ken Tossell</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/libuvc_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend condition="$ROS_DISTRO != noetic">libuvc</depend>
  <depend condition="$ROS_DISTRO == noetic">libuvc-dev</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/libuvc_camera_nodelet.xml" />
  </export>
</package>
